    - Always include /dev/console, even for images that will use devfs.
      This means that netboot users will not have to remember the devfs=mount.
    - Left devfs=mount in syslinux.cfg anyway, out of general caution.
    - Add another dh_testroot call before udebs are downloaded.
    - Document debian-installer/probe/usb=false in syslinux f7.txt.
  * dann frazier
    - Fix installs w/ USB keyboards w/ ia64 cdroms.  Add input-modules to the
      pkglist, and fix ia64.cfg, which was pointing at the non-smp kernel.
      This caused the build to put modules.dep in the wrong directory, causing
      modprobe to fail - will need linux-kernel-di 0.50 to build.
  * Stephen R. Marenka
    - Add nic-shared-modules to nativehd/m68k pkg-list.
    - Update m68k demo.cfg to fix build problem.
    - Bumped amiga to 2.4.25, all other subarchs 2.2.25.
  * Jeff Bailey
    - hppa: Add miniiso target.
    - hppa: Clean up existing targets so they produce something useful.
    - ia64: Add miniiso target.
    - ia64: Clean up cdrom target.

 -- Joey Hess <joeyh@debian.org>  Mon, 15 Mar 2004 20:08:46 -0500

debian-installer (20040315) unstable; urgency=low

  * One more build for beta3 after all, since we forgot to update the
    installation howto for partman. Also, ftp-master has not accepted the old
    one, so this causes no extra delay.

 -- Joey Hess <joeyh@debian.org>  Sun, 14 Mar 2004 21:09:03 -0500

debian-installer (20040314) unstable; urgency=low

  * Steve Langasek <vorlon@debian.org>
    - Add MANIFEST entries for alpha netboot and cdrom images.
    - Add a miniiso target for alpha, based on the same target for mips.
    - Add the demo target for alpha as well.
  * Anton Zinoviev
    - add smyleys of partman to graphic.utf
    - add needed-characters/{bg,ru}
  * Joey Hess
    - Change NO_I18N to DROP_LANG, a perl regexp of languages not to include.
    - We're out of space on the root i386 floppy, so I have dropped some