@@ -4,7 +4,7 @@ magic (library reduction etc.) and building an image.
 
 Recipe:
  - Install the build-dependencies on the host system
-   (run dpkg-checkbuilddeps).
+   (run dpkg-checkbuilddeps in the parent installer/ directory).
  - Create your own sources.list.udeb.local, otherwise the build host's
    sources.list is taken as a template for sources.list.udeb.
  - Run "make" to get a list of available targets.
